# docs/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "GoChat 聊天/好友/房间管理后端接口",
     "title": "GoChat Backend API",
-    "termsOfService": "http://swagger.io/terms/",
+    "termsOfService": "https://swagger.io/terms/",
     "contact": {
       "name": "XIA",
       "email": "906094554@qq.com"
@@ -183,7 +183,7 @@
         ],
         "responses": {
           "200": {
-            "description": "发送成功",
+            "description": "成功已读",
             "schema": {
               "$ref": "#/definitions/gochat_internal_shared_api.Response"
             }
@@ -253,65 +253,6 @@
       }
     },
     "/chats/rooms/messages": {
-      "get": {
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "description": "获取当前登录用户所在房间的消息记录，可基于 base_id 游标和 limit 分页",
-        "tags": [
-          "Chat"
-        ],
-        "summary": "获取房间内的消息",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "群聊对象房间ID",
-            "name": "user_id",
-            "in": "path",
-            "required": true,
-            "x-example": "\"019b5929-65bc-7549-89c6-3f7dc6872577\""
-          },
-          {
-            "type": "string",
-            "description": "分页游标",
-            "name": "base_id",
-            "in": "query",
-            "x-example": "\"019b593b-462e-74d6-bfda-0e103a172190\""
-          },
-          {
-            "maximum": 100,
-            "minimum": 1,
-            "type": "integer",
-            "default": 20,
-            "description": "分页大小",
-            "name": "limit",
-            "in": "query",
-            "x-example": 50
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "成功返回房间消息记录",
-            "schema": {
-              "allOf": [
-                {
-                  "$ref": "#/definitions/gochat_internal_shared_api.Response"
-                },
-                {
-                  "type": "object",
-                  "properties": {
-                    "data": {
-                      "$ref": "#/definitions/internal_chat_port_http.ListRoomMessagesResponseData"
-                    }
-                  }
-                }
-              ]
-            }
-          }
-        }
-      },
       "post": {
         "security": [
           {
@@ -369,7 +310,7 @@
         ],
         "responses": {
           "200": {
-            "description": "发送成功",
+            "description": "成功已读",
             "schema": {
               "$ref": "#/definitions/gochat_internal_shared_api.Response"
             }
@@ -377,7 +318,68 @@
         }
       }
     },
-    "/friendship-requests/": {
+    "/chats/rooms/messages/{room_id}": {
+      "get": {
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "description": "获取当前登录用户所在房间的消息记录，可基于 base_id 游标和 limit 分页",
+        "tags": [
+          "Chat"
+        ],
+        "summary": "获取房间内的消息",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "群聊对象房间ID",
+            "name": "room_id",
+            "in": "path",
+            "required": true,
+            "x-example": "\"019b5929-65bc-7549-89c6-3f7dc6872577\""
+          },
+          {
+            "type": "string",
+            "description": "分页游标",
+            "name": "base_id",
+            "in": "query",
+            "x-example": "\"019b593b-462e-74d6-bfda-0e103a172190\""
+          },
+          {
+            "maximum": 100,
+            "minimum": 1,
+            "type": "integer",
+            "default": 20,
+            "description": "分页大小",
+            "name": "limit",
+            "in": "query",
+            "x-example": 50
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功返回房间消息记录",
+            "schema": {
+              "allOf": [
+                {
+                  "$ref": "#/definitions/gochat_internal_shared_api.Response"
+                },
+                {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "$ref": "#/definitions/internal_chat_port_http.ListRoomMessagesResponseData"
+                    }
+                  }
+                }
+              ]
+            }
+          }
+        }
+      }
+    },
+    "/friendship-requests": {
       "get": {
         "security": [
           {
@@ -525,7 +527,7 @@
         }
       }
     },
-    "/friendships/": {
+    "/friendships": {
       "get": {
         "security": [
           {
@@ -633,6 +635,11 @@
     },
     "/profiles/me": {
       "get": {
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
         "description": "根据token获取本用户资料",
         "tags": [
           "Profile"
@@ -808,7 +815,7 @@
         }
       }
     },
-    "/rooms/": {
+    "/rooms": {
       "get": {
         "security": [
           {
@@ -892,7 +899,7 @@
         }
       }
     },
-    "/rooms/requests/": {
+    "/rooms/requests": {
       "get": {
         "security": [
           {
@@ -1294,7 +1301,7 @@
               "$ref": "#/definitions/gochat_internal_notification_domain.MessageState"
             }
           ],
-          "example": "read"
+          "example": "delivered"
         }
       }
     },
