# internal/friendship/port/http/list_friendships_handler.go
@@ -44,7 +44,7 @@ type ListFriendshipsResponseData struct {
 // @Param        base_id  query     string    false "分页游标，返回该ID之前的记录"    example("019b593b-462e-74d6-bfda-0e103a172190")
 // @Param        limit    query     int    false "分页大小，默认20，最大100"   minimum(1) maximum(100) default(20) example(50)
 // @Success      200      {object}  api.Response{data=ListFriendshipsResponseData} "成功返回好友列表"
-// @Router       /friendships/ [get]
+// @Router       /friendships [get]
 func NewListFriendshipsHandler(useCase application.ListFriendshipsUseCase, validator ginutils.Validator) gin.HandlerFunc {
 	return ginutils.AdaptUseCaseToHandler(
 		useCase,
